--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "inspector-apm/inspector-laravel": "^4.15",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "neuron-core/neuron-ai": "^2.8"
+        "neuron-core/neuron-ai": "^2.8",
+        "spatie/pdf-to-text": "^1.54"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
